SERVER-31120 fix invalid session getMore invariant

When passing the wrong lsid to a cursor (not the lsid used to create it)
we invariant in sharding.  This appears to be about poor lifetime issues
in mongos cursors.

This papers over the bad api and adds a test for the fix.